--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -650,7 +650,7 @@
 
                             <label for="lastDateOfJoining">Last Date of joining :</label>
                             &nbsp;&nbsp;
-                            <input type="date" class="form-control" formControlName="lastDateOfJoining"
+                            <input myNumberOnly type="date" class="form-control" formControlName="lastDateOfJoining"
                                 min='{{this.minDateString}}'>
                         </div>
                     </div>
@@ -1262,7 +1262,7 @@
 
                                 <label for="technology"><span class="red">*</span>Event Date:
 
-                                    <input type="date" class="form-control" formControlName="date"
+                                    <input myNumberOnly type="date" class="form-control" formControlName="date"
                                         min='{{this.minDateString}}'>
                                 </label>
                                 <!-- <input class="form-control" placeholder="yyyy-mm-dd" name="dp" [minDate]="{year: 2010, month: 1, day: 1}" formControlName="date" ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()" > -->
@@ -1446,7 +1446,7 @@
                             <div class="form-group col-4">
                                 <label>
                                     <span class="red">*</span> Event Date:
-                                    <input type="date" class="form-control" formControlName="date"
+                                    <input myNumberOnly type="date" class="form-control" formControlName="date"
                                         min='{{this.minDateString}}'>
                                 </label>
                             </div>
@@ -1656,7 +1656,7 @@
                             <div class="form-group col-4">
                                 <label>
                                     <span class="red">*</span> Event Date:
-                                    <input type="date" class="form-control" formControlName="date"
+                                    <input myNumberOnly type="date" class="form-control" formControlName="date"
                                         min='{{this.minDateString}}'>
                                 </label>
                             </div>
