--- a/src/app/myprofile/myprofile.component.css
+++ b/src/app/myprofile/myprofile.component.css
@@ -12,3 +12,25 @@
   border-top: 2px solid green !important;
   margin-top: 0rem !important;
 }
+
+.buttonarticle{
+  margin: auto;
+  display: block;
+  padding: 8px;
+  border: none;
+  cursor: pointer;
+  margin-top: 45px;
+  color: white !important;
+  margin-left: 40%;
+  margin-right: 40%;
+  height: 41px;
+  padding: 8px 10px;
+      font-size: 66px;
+      font-size: 17px;
+      margin-top: 19px;
+      border-radius: 33px;
+      color: #ffff;
+      background: rgba(51,9,158,1);
+      background: -webkit-gradient(left top, right top, color-stop(0%, rgba(51,9,158,1)), color-stop(47%, rgba(51,9,158,1)), color-stop(100%, rgba(192,39,230,1)));
+      background: linear-gradient(to right, rgba(51,9,158,1) 0%, rgba(51,9,158,1) 47%, rgba(192,39,230,1) 100%);
+  }
